# garval_store

./: MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
garval_store/: hooks.py  install.py  modules.txt  order_confirmation.py  user_hooks.py  utils.py
garval_store/api/: __init__.py  address.py  auth.py  checkout.py  contact.py  orders.py  payment.py
garval_store/fixtures/: client_script.json
garval_store/garval_store/: __init__.py
garval_store/overrides/: __init__.py  customer.py
garval_store/public/css/: garval.css
garval_store/public/images/: README.md
garval_store/public/js/: garval.js
garval_store/templates/: __init__.py
garval_store/templates/emails/: bank_transfer_invoice.html
garval_store/templates/includes/: base.html  footer.html  navbar.html
garval_store/templates/pages/: __init__.py
garval_store/translations/: es.csv
garval_store/www/: about.html  about.py  aviso_legal.html  aviso_legal.py  cart.html  cart.py  checkout.html  checkout.py  contact.html  contact.py  customer_login.html  customer_login.py  customer_signup.html  customer_signup.py  declaracion_accesibilidad.html  declaracion_accesibilidad.py  home.html  home.py  logout.html  logout.py  my_account.html  my_account.py  order_confirmation.html  order_confirmation.py  payment.html  payment.js  payment.py  payment_failed.html  payment_failed.py  payment_success.html  payment_success.py  politica_cookies.html  politica_cookies.py  politica_privacidad.html  politica_privacidad.py  product.html  product.py  shop.html  shop.py  verify_email.html  (+1 more)
